# typeid-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  Makefile  README.md  UPSTREAM-REPORT.md  pyproject.toml
.github/workflows/: ci.yml  setup.yml
b4/adda162a8e/: metadata.json
b4/adda162a8e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
docs/adr/: 0001-base32-is-the-typeid-suffix-codec.md
docs/agents/: domain.md  issue-tracker.md
examples/: sqlalchemy.py
tests/: test_base32.py  test_spec.py  test_typeid.py  test_validation.py
typeid/: __init__.py  base32.py  cli.py  errors.py  typeid.py  validation.py
