[project]
name = "typeid-python"
version = "0.3.2"
description = "Python implementation of TypeIDs: type-safe, K-sortable, and globally unique identifiers inspired by Stripe IDs"
authors = [
  { name="Murad Akhundov", email= "akhundov1murad@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
repository = "https://github.com/akhundMurad/typeid-python"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
keywords = ["typeid", "uuid", "uuid6", "guid"]
dependencies = [
    "uuid6>=2023.5.2"
]


[dependency-groups]
dev = [
  "pytest==7.3.2",
  "black==23.3.0",
  "flake8==5.0.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "requests==2.31.0",
  "pyyaml>=6.0.3",
]
build = [
    "hatchling==1.27.0",
]


[project.optional-dependencies]
cli = ["click>=8.3.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typeid"]

[tool.hatch.build.targets.sdist]
include = [
  "typeid/",
]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/deps",
  "/htmlcov",
  "/tests",
  "mkdocs-plugins.code-workspace",
  "Makefile",
  "CODE_OF_CONDUCT.md",
  ".isort.cfg",
  ".gitignore",
  ".flake8",
  "junit",
  "requirements.txt",
  "mypy.ini",
  "pytest.ini",
  ".flake8",
  "pytest.ini",
]


[tool.pylint]
disable = ["C0111", "C0116", "C0114", "R0903"]

