[project]
name = "typeid-python"
version = "0.3.2"
description = "Python implementation of TypeIDs: type-safe, K-sortable, and globally unique identifiers inspired by Stripe IDs"
authors = [
  { name="Murad Akhundov", email= "akhundov1murad@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
repository = "https://github.com/akhundMurad/typeid-python"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
keywords = ["typeid", "uuid", "uuid6", "guid"]
dependencies = [
    "uuid-utils>=0.11.1"
]


[dependency-groups]
dev = [
  "pytest==7.3.2",
  "black==23.3.0",
  "flake8==5.0.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "requests==2.31.0",
  "pyyaml>=6.0.3",
  "pre-commit>=4.4.0",
  "ruff>=0.14.5",
]
build = [
    "hatchling==1.27.0",
]


[project.optional-dependencies]
cli = ["click>=8.3.1"]

[project.scripts]
typeid = "typeid.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typeid"]

[tool.hatch.build.targets.sdist]
include = [
  "typeid/",
]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/deps",
  "/htmlcov",
  "/tests",
  "mkdocs-plugins.code-workspace",
  "Makefile",
  "CODE_OF_CONDUCT.md",
  ".isort.cfg",
  ".gitignore",
  ".flake8",
  "junit",
  "requirements.txt",
  "mypy.ini",
  "pytest.ini",
  ".flake8",
  "pytest.ini",
]


[tool.pytest]
testpaths = ["tests"]
pythonpath = "typeid"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific rules
]
ignore = [
    "N818",   # exception class names are part of the public API; renaming would break users
    "SIM102", # sometimes it's better to nest
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # asserts are expected in tests
]
"examples/*" = [
    "S101", # asserts are fine in example code
]

[tool.ruff.lint.isort]
force-single-line = true

#[tool.pylint]
#disable = ["C0111", "C0116", "C0114", "R0903"]
