[project]
name = "typeid-python"
version = "0.3.2"
description = "Python implementation of TypeIDs: type-safe, K-sortable, and globally unique identifiers inspired by Stripe IDs"
authors = [
  { name="Murad Akhundov", email= "akhundov1murad@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
repository = "https://github.com/akhundMurad/typeid-python"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
keywords = ["typeid", "uuid", "uuid6", "guid"]
dependencies = [
    "uuid-utils>=0.11.1"
]


[dependency-groups]
dev = [
  "pytest==7.3.2",
  "black==23.3.0",
  "flake8==5.0.0",
  "isort==5.12.0",
  "mypy==1.3.0",
  "requests==2.31.0",
  "pyyaml>=6.0.3",
  "pre-commit>=4.4.0",
  "ruff>=0.14.5",
]
build = [
    "hatchling==1.27.0",
]


[project.optional-dependencies]
cli = ["click>=8.3.1"]

[project.scripts]
typeid = "typeid.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typeid"]

[tool.hatch.build.targets.sdist]
include = [
  "typeid/",
]
exclude = [
  "/.github",
  "/docs",
  "/examples",
  "/deps",
  "/htmlcov",
  "/tests",
  "mkdocs-plugins.code-workspace",
  "Makefile",
  "CODE_OF_CONDUCT.md",
  ".isort.cfg",
  ".gitignore",
  ".flake8",
  "junit",
  "requirements.txt",
  "mypy.ini",
  "pytest.ini",
  ".flake8",
  "pytest.ini",
]


[tool.pytest]
testpaths = ["tests"]
pythonpath = "typeid"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py312"
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    "*/migrations/*.py",
    "staticfiles/*",
    "*.pyi",
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    "UP038", # Checks for uses of isinstance/issubclass that take a tuple
    # of types for comparison.
    # Deactivated because it can make the code slow:
    # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038",
]

[tool.ruff.lint.isort]
force-single-line = true

#[tool.pylint]
#disable = ["C0111", "C0116", "C0114", "R0903"]
